finished 2nd exercise

--- a/Logistic Regression.ipynb
+++ b/Logistic Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "92546de7",
+   "id": "67912299",
    "metadata": {},
    "source": [
     "You are walking in the forest and see an iris and measure:\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c92eae26",
+   "id": "bc52236f",
    "metadata": {},
    "outputs": [
     {
@@ -200,6 +200,7 @@
     "### source: https://drive.google.com/file/d/1huOxaKfmGpO8e4hdxWKI2gSyPbpqZxab/view\n",
     "%matplotlib inline\n",
     "import numpy as np\n",
+    "\n",
     "from sklearn import datasets\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import matplotlib.pyplot as plt\n",
@@ -212,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "89273b22",
+   "id": "6042cf64",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd417ee5",
+   "id": "d2c2f48a",
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d8d7a660",
+   "id": "f2a696c3",
    "metadata": {},
    "outputs": [
     {
@@ -308,26 +309,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b07edfd",
+   "execution_count": 22,
+   "id": "bd7239ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.02563061, 0.97436939]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "log_reg.predict_proba([[2.5]])"
+    "log_reg.predict_proba([[2.5]]) "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0468dc6d",
+   "id": "60532b94",
    "metadata": {},
    "source": [
-    "zu 97,4%iger Wahrscheinlichkeit handelt es sich nach der *Petal Width* um eine Iris-Virginica."
+    "zu 97,4%iger Wahrscheinlichkeit handelt es sich nach der **Petal Width** um eine Iris-Virginica."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "dc0a8ce1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/jb/b4kcc8352qlcrywkmmp0fxtr0000gp/T/ipykernel_29543/558730447.py:4: DeprecationWarning: `np.int` is a deprecated alias for the builtin `int`. To silence this warning, use `int` by itself. Doing this will not modify any behavior and is safe. When replacing `np.int`, you may wish to use e.g. `np.int64` or `np.int32` to specify the precision. If you wish to review your current use, check the release note link for additional information.\n",
+      "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
+      "  y = (iris[\"target\"] == 2).astype(np.int)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.39951162e-10, 1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "X = iris[\"data\"][:, (0,1,2,3)]  # petal length, petal width\n",
+    "y = (iris[\"target\"] == 2).astype(np.int)\n",
+    "\n",
+    "log_reg = LogisticRegression(C=10**10, random_state=42)\n",
+    "log_reg.fit(X, y)\n",
+    "\n",
+    "x0, x1, x2, x3 = [[4.8]],[[2.5]],[[5.3]],[[2.4]]\n",
+    "X_new = np.c_[x0, x1, x2, x3]\n",
+    "\n",
+    "y_proba = log_reg.predict_proba(X_new)\n",
+    "\n",
+    "y_proba "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "174addb7",
+   "metadata": {},
+   "source": [
+    "Mit fast 100%iger Wahrscheinlichkeit handelt es sich bei dem Datensatz um eine Iris Virginica."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc17f9af",
+   "id": "f0c67130",
    "metadata": {},
    "outputs": [],
    "source": []
